--- a/layout.css
+++ b/layout.css
@@ -14,7 +14,14 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-video,
+video {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+}
+
 canvas {
     width: 100%;
     max-width: 400px;
